- Adjusted margins. - Activated \ppMarginAbove (it now does something) - Added \exercisebankversion and \exercisebankbuild - Removed docs for \orderedselect since it's not implemented yet - Moved lengths to own file and updated README - Earlier fix for weird behaviour on environments caused weird indent. Reverted back to old solution.

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -79,9 +79,12 @@
     \change{Margins now more manageable}
     \change{Prevent overwriting of \dac\graphicspath}
     \change{Set (append) to \dac\input@path no matter what.}
-    \change{Fixed bug where part problem headers showing weird if problem started with envs. like enumerate or a figure.}
+    % \change{Fixed bug where part problem headers showing weird if problem started with envs. like enumerate or a figure.}
     \change{Added command \dac\buildall to build all sets}
     \change{Moved tag placement for when \dac\ShowTags active}
+    \change{Adjusted margins.}
+    \change{Activated \dac\ppMarginAbove (it now does something)}
+    \change{Added \dac\exercisebankversion and \dac\exercisebankbuild}
 \chlogtable
 
 
