- New lenght: \introOutdent (Earlier \introMargin, which didn't do anything). - Adjusted and updated margin processing

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -85,6 +85,7 @@
     \change{Adjusted margins.}
     \change{Activated \dac\ppMarginAbove (it now does something)}
     \change{Added \dac\exercisebankversion and \dac\exercisebankbuild}
+    % \change{Removed docs for \orderedselect since it's not implemented yet}
 \chlogtable
 
 
