- More updates on margins.

--- a/src/lengths.tex
+++ b/src/lengths.tex
@@ -34,7 +34,7 @@
 % Problem margins:
 \setlength{\pMarginLeft}{-\ppMargin-2.5em}
 \setlength{\pMarginBelow}{1em}
-\setlength{\pMarginAbove}{2\baselineskip}
+\setlength{\pMarginAbove}{0pt}
 % Part problem margin
 \setlength{\ppMargin}{0.5em}
 \setlength{\ppMarginBelow}{0em}
