--- a/src/packageoptions.tex
+++ b/src/packageoptions.tex
@@ -50,8 +50,8 @@ default/.style = {
   figure root directory=\@exercisesDir,
   style margins=true,
   problem needs space=0.2\paperheight,
-  no needspace/.is if={exbank@if@needspace},
-  no needspace/.default = false
+  needspace/.is if={exbank@if@needspace},
+  no needspace/.code = {\global\ifexbank@if@needspacefalse}
 },
 % Expanded macros
 exercise directory/.estore in = \@exercisesDir, %<- excepted from opt-syntax
