--- a/release/exercisebank-doc.tex
+++ b/release/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.2.3-prereleaseb127 - 2019/02/16
-%% The LaTeX package exercisebank - version v0.2.3-prerelease (2019/02/16) build 127
+%% exercisebank v0.2.3-prereleaseb128 - 2019/02/18
+%% The LaTeX package exercisebank - version v0.2.3-prerelease (2019/02/18) build 128
 %% Manual/Documentation for exercisebank.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -120,7 +120,7 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{exercisebank - manual\\ v0.2.3-prerelease{\\[-0.5em]\footnotesize(build 127)}}}
+\title{{exercisebank - manual\\ v0.2.3-prerelease{\\[-0.5em]\footnotesize(build 128)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
@@ -309,7 +309,7 @@ That covers the basics. Enjoy
 Turns on the solutions, so they are shown.
 \end{docCommand}
 \begin{docCommand}{SolutionsOnly}{}\addcontentsline{toc}{subsubsection}{\refCom{SolutionsOnly}}
-\defnew{v0.2.3-prerelease\\2019/02/16 }
+\defnew{v0.2.3-prerelease\\2019/02/18 }
 Displays only solutions (if there are any) to the part problem
 \end{docCommand}
 \begin{docEnvironment}{problem}{}
@@ -364,7 +364,7 @@ This contains information about an exercise set. It is intended to be on the top
 exercise, explaining short what the exercise is about. It's only visible when using \dac{sprite}
 \end{docCommand}
 \begin{docCommand}{buildall}{}\addcontentsline{toc}{subsubsection}{\refCom{buildall}}
-\defnew{v0.2.3-prerelease\\2019/02/16 }
+\defnew{v0.2.3-prerelease\\2019/02/18 }
  Build all sets defined with \dac{makeset}
 \end{docCommand}
 \begin{docCommand}{sprite}{\oarg{PiP}}\addcontentsline{toc}{subsubsection}{\refCom{sprite}}
@@ -415,7 +415,7 @@ As you can see in the intro section of the documentation, this is for cherry pic
 To be used in \refCom{makeset}
 \end{docCommand}
 \begin{docCommand}{buildset}{\oarg{intro|nohead|nointro}\marg{setname}}\addcontentsline{toc}{subsubsection}{\refCom{buildset}}
-\updated{v0.2.3-prerelease\\2019/02/16 }
+\updated{v0.2.3-prerelease\\2019/02/18 }
 This command runs the set given. The set has do be defined by \dac{makeset}. E.eg
 \begin{dispListing}
 \makeset{myExerciseSet}{exercisefile1, \select{exercisefile2}{1,2}}
@@ -462,7 +462,7 @@ Labels a partproblem. You can reference to it later using \dac{ppref}\{\meta{lab
 Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.g. 1c)
 \end{docCommand}
 \begin{docCommand}{ppgref}{\marg{label}}\addcontentsline{toc}{subsubsection}{\refCom{ppgref}}
-\defnew{v0.2.3-prerelease\\2019/02/16 }
+\defnew{v0.2.3-prerelease\\2019/02/18 }
 Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This can be used for \emph{global} exercises.
 \end{docCommand}
 \begin{docCommand}{pref}{\marg{label}}\addcontentsline{toc}{subsubsection}{\refCom{pref}}
@@ -470,15 +470,15 @@ Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This can be us
  Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.g. 1
 \end{docCommand}
 \begin{docCommand}{pgref}{\marg{label}}\addcontentsline{toc}{subsubsection}{\refCom{pgref}}
-\defnew{v0.2.3-prerelease\\2019/02/16 }
+\defnew{v0.2.3-prerelease\\2019/02/18 }
  Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.g. 1, but have global search.
 \end{docCommand}
 \begin{docCommand}{HideTags}{\marg{list}}\addcontentsline{toc}{subsubsection}{\refCom{HideTags}}
-\updated{v0.2.3-prerelease\\2019/02/16 }
+\updated{v0.2.3-prerelease\\2019/02/18 }
 Hide all exercises containing the list of tags when building a set.
 \end{docCommand}
 \begin{docCommand}{ShowAllTags}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowAllTags}}
-\defnew{v0.2.3-prerelease\\2019/02/16 }
+\defnew{v0.2.3-prerelease\\2019/02/18 }
 Reset tags set by \dac{HideTags}
 \end{docCommand}
 \filbreak\subsection{Configuration and options}
@@ -490,11 +490,11 @@ You can do a lot of configurations on this package, and probably
  \dac{exclude} and \dac{select}
 \end{docCommand}
 \begin{docCommand}{ShowTags}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowTags}}
-\updated{v0.2.3-prerelease\\2019/02/16 }
+\updated{v0.2.3-prerelease\\2019/02/18 }
  Shows the tags in front of the part problems much like \dac{ShowNumbers}
 \end{docCommand}
 \begin{docCommand}{ShowFilenames}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowFilenames}}
-\updated{v0.2.3-prerelease\\2019/02/16 }
+\updated{v0.2.3-prerelease\\2019/02/18 }
  Shows the path+filename to the current exercise file
 \end{docCommand}
 \begin{docCommand}{exercisebanksetup}{\marg{\oarg{key/values}}}\addcontentsline{toc}{subsubsection}{\refCom{exercisebanksetup}}
@@ -605,7 +605,7 @@ The Norwegian translation would then be done with
 \end{docCommand}
 \filbreak\subsection{Problem options: points and tagging}
 \begin{docCommand}{nextproblem}{}\addcontentsline{toc}{subsubsection}{\refCom{nextproblem}}
-\updated{v0.2.3-prerelease\\2019/02/16 }
+\updated{v0.2.3-prerelease\\2019/02/18 }
 Prior to a problem environment in an exercise file you can pass options
 using the \dac{nextproblem} command. If you e.g. wanted to hide one regardless
 of what set it is you'd do
@@ -659,7 +659,7 @@ Here are the \dac{nextproblem} keys:
 Contains the total number of points for all exercises in the current set
 \end{docCommand}
 \begin{docCommand}{exercisepoints}{}\addcontentsline{toc}{subsubsection}{\refCom{exercisepoints}}
-\defnew{v0.2.3-prerelease\\2019/02/16 }
+\defnew{v0.2.3-prerelease\\2019/02/18 }
  Contains the total number of points in the current exercise (or "Problem")
 \end{docCommand}
 \filbreak\subsection{Triggers}
@@ -682,7 +682,7 @@ has been printed. It is also triggered after the PP header for SolutionsOnly.
 
 \end{docCommand}
 \begin{docCommand}{ClearHook}{}\addcontentsline{toc}{subsubsection}{\refCom{ClearHook}}
-\defnew{v0.2.3-prerelease\\2019/02/16 }
+\defnew{v0.2.3-prerelease\\2019/02/18 }
  Deletes all information from a hook.
  Note that if preceded by \dac{rigid}, then the
  ENTIRE hook will be cleared.
@@ -708,6 +708,14 @@ where the package should be looking for exercises. Default is the same directory
  Executes \meta{True} if \meta{needle} is found in \meta{haystack}
  else executes \meta{False}
 \end{docCommand}
+\begin{docCommand}{exercisebankversion}{}\addcontentsline{toc}{subsubsection}{\refCom{exercisebankversion}}
+\defnew{v0.2.3-prerelease\\2019/02/18 }
+ Prints the current version and build to the error log
+\end{docCommand}
+\begin{docCommand}{exercisebankbuild}{}\addcontentsline{toc}{subsubsection}{\refCom{exercisebankbuild}}
+\defnew{v0.2.3-prerelease\\2019/02/18 }
+ Prints the current build number to the error log
+\end{docCommand}
 This package also includes some extra stuff. For example the \dac{At} and \dac{Trigger}
 \begin{docCommand}{At}{\marg{AnyMacro}}
 \updated{v0.2.1\\2018/09/24 }Here you can send any macro because it isn't evaluated! For example \dac{At}\dac{BeginSomething} is fine and even if \dac{BeginSomething} is not defined. Also and when using \dac{Trigger} it just ignores it if it didn't exist. It's pretty similar in function as to \dac{AtBeginDocument}.
@@ -718,7 +726,7 @@ This package also includes some extra stuff. For example the \dac{At} and \dac{T
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{@rigid}{}\addcontentsline{toc}{subsubsection}{\refCom{@rigid}}
-\defnew{v0.2.3-prerelease\\2019/02/16 }
+\defnew{v0.2.3-prerelease\\2019/02/18 }
 Used to make \dac{At} so that the contents won't be deleted
 with \dac{ClearHook}. Note that the necessary hooks might not be
  registered as rigid. Thus show caution when deleting hooks
@@ -758,9 +766,9 @@ Distance above Problem \# header
 \end{docCommand}
 \begin{docCommand}{ppMargin}{}\addcontentsline{toc}{subsubsection}{\refCom{ppMargin}}
 
- Part problem: how far away from the text the part problem labels are.
+ Part problem: how far away from the text the part problem labels are (horisontally).
 \end{docCommand}
-\begin{docCommand}{introMargin}{}\addcontentsline{toc}{subsubsection}{\refCom{introMargin}}
+\begin{docCommand}{introOutdent}{}\addcontentsline{toc}{subsubsection}{\refCom{introOutdent}}
 
  The offset of margins for intros
 \end{docCommand}
@@ -787,9 +795,11 @@ Distance above Problem \# header
 \addcontentsline{mac}{macro}{\refCom{exclude}}{}
 \addcontentsline{mac}{macro}{\refCom{exec}}{}
 \addcontentsline{mac}{macro}{\refCom{exerciseFile}}{}
+\addcontentsline{mac}{macro}{\refCom{exercisebankbuild}}{}
 \addcontentsline{mac}{macro}{\refCom{exercisebanksetup}}{}
+\addcontentsline{mac}{macro}{\refCom{exercisebankversion}}{}
 \addcontentsline{mac}{macro}{\refCom{exercisepoints}}{}
-\addcontentsline{mac}{macro}{\refCom{introMargin}}{}
+\addcontentsline{mac}{macro}{\refCom{introOutdent}}{}
 \addcontentsline{mac}{macro}{\refCom{makeset}}{}
 \addcontentsline{mac}{macro}{\refCom{makesetdefaults}}{}
 \addcontentsline{mac}{macro}{\refCom{nextproblem}}{}
@@ -881,7 +891,7 @@ Distance above Problem \# header
 \newversion{v0.2.2 2018/10/04}
     \change{Made trailing commas ignored in all lists (\dac\makeset,\dac\buildset,\dac\select,\dac\exclude, etc.)}
     \change{Fixed bug where tags wouldn't hide.}
-\newversion{v0.2.3-prerelease 2019/02/16}
+\newversion{v0.2.3-prerelease 2019/02/18}
     \change{Added possibility of custom part problem header from \dac\nextproblem}
     \change{Added possibility of showing problem only when \dac\DisplaySolutions active}
     \change{Corrected use of the length \dac\ppMarginBelow}
@@ -899,9 +909,13 @@ Distance above Problem \# header
     \change{Margins now more manageable}
     \change{Prevent overwriting of \dac\graphicspath}
     \change{Set (append) to \dac\input@path no matter what.}
-    \change{Fixed bug where part problem headers showing weird if problem started with envs. like enumerate or a figure.}
+    % \change{Fixed bug where part problem headers showing weird if problem started with envs. like enumerate or a figure.}
     \change{Added command \dac\buildall to build all sets}
     \change{Moved tag placement for when \dac\ShowTags active}
+    \change{Adjusted margins.}
+    \change{Activated \dac\ppMarginAbove (it now does something)}
+    \change{Added \dac\exercisebankversion and \dac\exercisebankbuild}
+    % \change{Removed docs for \orderedselect since it's not implemented yet}
 \chlogtable
 
 
